# Rust-socket

client/: Cargo.toml
client/src/: emitter.rs  main.rs
server/: index.js  package-lock.json  package.json
