[package]
name = "rust-socket-deneme-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
# rust_socketio = "0.4.2"
rust_socketio = { version = "0.4.2", features = ["async"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
